--- a/style.css
+++ b/style.css
@@ -45,6 +45,13 @@ button {
 .offButton{
     background-color: #5f6c6d;
 }
+.r1onButton{
+    background-color: #1b8a94;
+}
+
+.r1offButton{
+    background-color: #5f6c6d;
+}
 
 .connectButton{
     background-color: #24af37;
