--- a/style.css
+++ b/style.css
@@ -33,9 +33,9 @@ button {
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
-    border: none;
+    border: 3px solid black;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .onButton{
