--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body {
     background-color: LightYellow;
     box-shadow: 2px 2px 12px 1px rgba(140,140,140,.5);
 }
-button {
+.button {
     color: white;
-    padding: 14px 20px;
+    padding: 14px 24px;
     margin: 8px 0;
     border: 3px solid black;
     cursor: pointer;
