--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     background-color: LightYellow;
     box-shadow: 2px 2px 12px 1px rgba(140,140,140,.5);
 }
-.button {
+button {
     color: white;
     padding: 14px 24px;
     margin: 8px 0;
