--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ body {
     background-color: LightYellow;
     box-shadow: 2px 2px 12px 1px rgba(140,140,140,.5);
 }
+.tab4 {
+            tab-size: 8;
+}
+		
 button {
     color: white;
     padding: 14px 20px;
