--- a/style.css
+++ b/style.css
@@ -50,6 +50,22 @@ button {
     background-color: #5f6c6d;
 }
 
+.DSonButton{
+    background-color: #1b8a94;
+}
+
+.DSoffButton{
+    background-color: #5f6c6d;
+}
+
+.PSonButton{
+    background-color: #1b8a94;
+}
+
+.PSoffButton{
+    background-color: #5f6c6d;
+}
+
 .r1onButton{
     background-color: #1b8a94;
 }
